fusiondirectory/fusiondirectory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: fusiondirectory
  name: fusiondirectory
  namespace: ldap
spec:
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      k8s-app: fusiondirectory
  template:
    metadata:
      labels:
        k8s-app: fusiondirectory
    spec:
      containers:
      - image: quay.io/dhtech/fusiondirectory:v1.1-webservice
        imagePullPolicy: Always
        name: fusiondirectory
        volumeMounts:
        - mountPath: "/etc/ssl/ldap"
          name: cacert-config
      - image: quay.io/dhtech/dhauth
        imagePullPolicy: Always
        name: dhauth
      restartPolicy: Always
      volumes:
        - name: cacert-config
          configMap:
            name: fusiondirectory-config
